--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version : "3.1"
 services:
     postgres_db:
-        image: postgres: 12.1
+        image: postgres:12.1
         container_name: db
         restart: always
         ports:
             - "5444:5432"
-        enviroment:
+        environment:
             POSTGRES_USER: 'event'
             POSTGRES_PASSWORD: 'defaultpassword'
             POSTGRES_DB: 'eeeeeventdb'
