--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
         ports:
             - "5001:5000"
         volumes:
-                - ./server:/server
+                - ./server:/app
         command: npm start
         depends_on:
             - postgres_db
@@ -33,6 +33,6 @@ services:
         ports:
             - "3001:3000"
         volumes:
-            - ./client:/client
+            - ./client:/app
         depends_on:
             - server
