--- a/docker-compose.win.yml
+++ b/docker-compose.win.yml
@@ -11,7 +11,7 @@ services:
       POSTGRES_PASSWORD: "defaultpassword"
       POSTGRES_DB: "eeeeeventdb"
     volumes:
-      - ./data:/var/lib/postgresql/data
+      - pgdata:/var/lib/postgresql/data
 
   server:
     restart: always
@@ -38,3 +38,7 @@ services:
       - /app/node_modules
     depends_on:
       - server
+
+volumes:
+  pgdata:
+    driver: local
