--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,6 +4,7 @@ COPY package*.json /app/
 RUN npm install
 #or without dependencies
 #RUN npm install nodemon
+ENV PATH /app/node_modules/.bin$PATH
 COPY . /app/
 EXPOSE 5001
 CMD [ "npm", "start"]
