--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "express-validator": "^6.3.1",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.2",
+    "passport": "^0.4.1",
+    "passport-google-oauth": "^2.0.0",
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
