--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "pg": "^7.17.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
-    "sequelize-cli": "^5.5.1"
+    "sequelize-cli": "^5.5.1",
+    "session-file-store": "^1.3.1"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
