--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,8 @@
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1",
-    "session-file-store": "^1.3.1"
+    "session-file-store": "^1.3.1",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "eslint": "^6.1.0",
