--- a/server/.gitignore
+++ b/server/.gitignore
@@ -9,6 +9,7 @@
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -19,3 +20,6 @@ yarn-debug.log*
 yarn-error.log*
 
 keys.js
+.eslintrc
+.prettierrc
+.eslintrc.json
