--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,9 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
-		"express-session": "^1.17.0",
 		"express-validator": "^6.3.1",
 		"jsonwebtoken": "^8.5.1",
+		"nodemailer": "^6.4.2",
 		"nodemon": "^2.0.2",
 		"passport": "^0.4.1",
 		"passport-google-oauth": "^2.0.0",
@@ -30,7 +30,6 @@
 		"pg-hstore": "^2.3.3",
 		"sequelize": "^5.21.3",
 		"sequelize-cli": "^5.5.1",
-		"session-file-store": "^1.3.1",
 		"uuid": "^3.4.0"
 	},
 	"devDependencies": {
