--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,15 @@ services:
     volumes:
       - ./data:/var/lib/postgresql/data
 
+  redis:
+    container_name: redis
+    image: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./redis:/data
+    restart: always
+
   server:
     restart: always
     container_name: serverside
@@ -20,12 +29,15 @@ services:
       context: ./server
     ports:
       - "5001:5000"
+    environment:
+      REDIS_HOST: redis
     volumes:
       - ./server:/app
       - /app/node_modules
     command: npm start
     depends_on:
       - postgres_db
+      - redis
 
   client:
     build:
