--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
 		"passport-local": "^1.0.0",
 		"pg": "^7.18.1",
 		"pg-hstore": "^2.3.3",
+		"redis": "^3.0.2",
 		"sequelize": "^5.21.3",
 		"sequelize-cli": "^5.5.1",
 		"uuid": "^3.4.0"
