--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.4.1",
     "mapbox-gl": "^1.7.0",
     "react": "^16.12.0",
+    "react-datepicker": "^2.12.1",
     "react-dom": "^16.12.0",
     "react-map-gl": "^5.2.2",
     "react-mapbox-gl-geocoder": "^1.1.0",
