--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
 		"express": "^4.17.1",
 		"express-validator": "^6.3.1",
 		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.2",
 		"nodemailer": "^6.4.2",
 		"nodemon": "^2.0.2",
 		"passport": "^0.4.1",
