--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.9.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-datetime": "^2.16.3",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
