--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
     "date-fns": "^2.9.0",
     "moment": "^2.24.0",
     "react": "^16.12.0",
+    "react-avatar-editor": "^12.0.0-beta.0",
     "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-transition-group": "^4.3.0"
