--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,51 +1,37 @@
-version: "3.1"
+version: '3.1'
 services:
   postgres_db:
     image: postgres:12.1
     container_name: db
     restart: always
     ports:
-      - "5444:5432"
+      - '5444:5432'
     environment:
-      POSTGRES_USER: "event"
-      POSTGRES_PASSWORD: "defaultpassword"
-      POSTGRES_DB: "eeeeeventdb"
+      POSTGRES_USER: 'event'
+      POSTGRES_PASSWORD: 'defaultpassword'
+      POSTGRES_DB: 'eeeeeventdb'
     volumes:
       - ./data:/var/lib/postgresql/data
-
-  redis:
-    container_name: redis
-    image: redis
-    ports:
-      - "6379:6379"
-    volumes:
-      - ./redis:/data
-    restart: always
-
   server:
     restart: always
     container_name: serverside
     build:
       context: ./server
     ports:
-      - "5001:5000"
-    environment:
-      REDIS_HOST: redis
+      - '5001:5000'
     volumes:
       - ./server:/app
       - /app/node_modules
-      - /app/uploads
     command: npm start
     depends_on:
       - postgres_db
-      - redis
 
   client:
     build:
       context: ./client/
     container_name: clientside
     ports:
-      - "3001:3000"
+      - '3001:3000'
     volumes:
       - ./client:/app
       - /app/node_modules
